# ine5429-primes

./: Cargo.toml  README.md
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/clap/: all.html  index.html  macro.load_yaml.html  sidebar-items.js  struct.App.html  struct.Arg.html  struct.ArgGroup.html
docs/hashbrown/: all.html  enum.TryReserveError.html  struct.HashMap.html  struct.HashSet.html
docs/hashbrown/hash_map/: enum.DefaultHashBuilder.html  enum.Entry.html  enum.RawEntryMut.html  index.html  struct.Drain.html  struct.DrainFilter.html  struct.HashMap.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.Keys.html  (+9 more)
docs/indexmap/: all.html  index.html
docs/ine5429_primes/: all.html  index.html  sidebar-items.js
docs/primetool/: all.html  fn.main.html  index.html
graphs/: README.md  fermat_1000_4096_89898989  millerrabin_10_1024_89898989  mlcg_1000_4096_89898989
primes/: README.md  fermat_1000_128_random.txt  fermat_1000_256_random.txt  fermat_1000_40_random.txt  fermat_1000_56_random.txt  fermat_1000_80_random.txt  fermat_100_4096_random.txt  fermat_200_2048_random.txt  fermat_500_1024_random.txt  fermat_500_512_random.txt  millerrabin_1000_128_random.txt  millerrabin_1000_256_random.txt  millerrabin_1000_40_random.txt  millerrabin_1000_56_random.txt  millerrabin_1000_80_random.txt  millerrabin_100_4096_random.txt  millerrabin_200_2048_random.txt  millerrabin_500_1024_random.txt  millerrabin_500_512_random.txt
src/: cli.yaml  environment.rs  functions.rs  lib.rs  main.rs  prime_test.rs  rand_gen.rs
(+391 files in other folders)
