[package]
name = "ine5429-primes"
version = "0.1.0"
authors = ["Matheus D C Roque <matheusdcroque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "primetool"

[dependencies]
env_logger = "0.8"
log = "0.4.14"
num-bigint = " 0.4.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
